# libecw

./: Build.txt  Makefile  README.md  config.status  crash.patch  libecwj2-3.3.patch  libtool
Source/: Makefile  Makefile.am  Makefile.in  configure.in
Source/C/NCSEcw/NCSEcw/: ComNCSRenderer.rgs  NCSEcw.cpp  NCSEcw.def  NCSEcw.dsp  NCSEcw.dsw  NCSEcw.idl  NCSEcw.rc  NCSEcw.sln  NCSEcw.vcproj  NCSEcw8.sln  NCSEcw8.vcproj  NCSEcwCom.def  NCSFile.cpp  NCSOutputFile.cpp  NCSRenderer.cpp
Source/C/NCSEcw/NCSEcwC/: NCSEcwC.def  NCSEcwC.dsp  NCSEcwC.rc  NCSEcwC.vcproj  NCSEcwC8.vcproj
Source/C/NCSEcw/NCSEcwCE/: NCSEcw.idl  NCSEcw.rc  NCSEcw.vcp  NCSEcw.vcw  NCSEcwps.def  NCSRenderer.rgs
Source/C/NCSEcw/NCSEcwC_SDK/: NCSEcwC_SDK.dsp  NCSEcwC_SDK.vcproj  NCSEcwC_SDK8.vcproj
Source/C/NCSEcw/NCSJP2/: NCSJP2.cpp  NCSJP2File.cpp  NCSJP2FileView.cpp  NCSJP2GMLGeoLocationBox.cpp  NCSJP2PCSBox.cpp  NCSJPCMainHeader.cpp  NCSJPCResolution.cpp  NCSMakeDoc.bat  doxyfile
Source/C/NCSEcw/lcms/: AUTHORS  COPYING  INSTALL  Makefile  Makefile.in  NEWS  README.1ST  aclocal.m4  compile  config.status  configure.lineno  lcms.pc  lcms.pc.in  libtool  ltmain.sh
Source/C/NCSUtil/: CNCSMetabaseEdit.cpp  NCSError.cpp  NCSLog.cpp  NCSPrefsXML.cpp  NCSPrefsXML.cpp.rej  NCSUtil.def  NCSUtil.dsp  NCSUtil.rc  NCSUtil.vcp  NCSUtil.vcproj  NCSUtil8.vcproj  file.c  malloc.c  thread.c
Source/C/NCSUtil/NCSUtil_Static/: NCSUtil_Static.dsp  NCSUtil_Static.vcproj  NCSUtil_Static8.vcproj
Source/C/libjpeg/: libjpeg.def  libjpeg.dsp  libjpeg.vcproj
Source/C/tinyxml/: Makefile  changes.txt  readme.txt  tinyxmlSTL.vcproj  tinyxml_lib.dsp  tinyxml_lib.vcproj
Source/NCSBuildGnu/: Makefile  Makefile.am  Makefile.in  NCSGnuConfig.h.in  NCSGnuConfig.h.in~  NCSGnuSystemDefs.h  stamp-h1
Source/NCSBuildGnu/.deps/: CNCSBase64Coder.Plo  NCSAffineTransform.Plo  NCSBase64.Plo  NCSBlockFile.Plo  NCSEcw.Plo  NCSError.Plo  NCSEvent.Plo  NCSFile.Plo  NCSGDTEPSGKey.Plo  NCSGDTEpsg.Plo  NCSGDTLocation.Plo  NCSGetPasswordDlg.Plo  NCSGetRequest.Plo  NCSHuffmanCoder.Plo  NCSJP2.Plo  NCSJP2BitsPerComponentBox.Plo  NCSJP2Box.Plo  NCSJP2CaptureResolutionBox.Plo  NCSJP2ChannelDefinitionBox.Plo  NCSJP2ColorSpecificationBox.Plo  NCSJP2ComponentMappingBox.Plo  NCSJP2ContiguousCodestreamBox.Plo  NCSJP2DataEntryURLBox.Plo  NCSJP2DefaultDisplayResolutionBox.Plo  NCSJP2File.Plo  NCSJP2FileTypeBox.Plo  NCSJP2FileView.Plo  NCSJP2GMLGeoLocationBox.Plo  NCSJP2HeaderBox.Plo  NCSJP2ImageHeaderBox.Plo  NCSJP2IntellectualPropertyBox.Plo  NCSJP2PCSBox.Plo  NCSJP2PaletteBox.Plo  NCSJP2ResolutionBox.Plo  NCSJP2SignatureBox.Plo  NCSJP2SuperBox.Plo  NCSJP2UUIDBox.Plo  NCSJP2UUIDInfoBox.Plo  NCSJP2UUIDListBox.Plo  NCSJP2WorldBox.Plo  (+262 more)
Source/NCSBuildQmake/: FixQmakeMakefile.bat  Makefile-linux-shared  Makefile-linux-static  Makefile-solaris-shared  Makefile-solaris-static  QmakeExampleMakes.bat  QmakeMakes.bat  libecwj2-win32-shared.dsp  libecwj2-win32-static.dsp  libecwj2.def  libecwj2_win32_net_shared.vcproj  libecwj2_win32_net_static.vcproj
Source/NCSNightlyBuild/: NCSNightlyBuildUnix.ksh  makefile.inc  makelibs.inc
Source/include/: NCSDefs.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: Makefile.am  Makefile.in  bootstrap  buildall.vcproj  configure  configure.in  examples.dsw  examples.sln
examples/autom4te.cache/: output.0  requests  traces.0
examples/compression/: Makefile.am  Makefile.in
examples/compression/example1/: CExample1-shared.dsp  CExample1-static.dsp  Cexample1_shared.vcproj  Cexample1_static.vcproj  Makefile-linux-shared  Makefile-linux-static  Makefile-solaris-shared  Makefile-solaris-static  Makefile.am  Makefile.in  cexample1.c  cexample1.dsp  cexample1.vcproj
examples/compression/example2/: CExample2-shared.dsp  CExample2-static.dsp  Cexample2_shared.vcproj  Cexample2_static.vcproj  Makefile-linux-shared  Makefile-linux-static  Makefile-solaris-shared  Makefile-solaris-static  Makefile.am  Makefile.in  cexample2.c  cexample2.dsp  cexample2.vcproj
examples/compression/example3/: CExample3-shared.dsp  CExample3-static.dsp  Cexample3_shared.vcproj  Cexample3_static.vcproj  Makefile-linux-shared  Makefile-linux-static  Makefile-solaris-shared  Makefile-solaris-static  Makefile.am  Makefile.in  cexample3.cpp  cexample3.dsp  cexample3.vcproj
examples/compression/example4/: CExample4-shared.dsp  CExample4-static.dsp  Cexample4_shared.vcproj  Cexample4_static.vcproj  cexample4.cpp  cexample4.dsp  cexample4.vcproj
examples/compression/example5/: CExample5-shared.dsp  CExample5-static.dsp  Cexample5_shared.vcproj  Cexample5_static.vcproj  Makefile-linux-shared  Makefile-linux-static  Makefile-solaris-shared  Makefile-solaris-static  Makefile.am  Makefile.in  cexample5.cpp  cexample5.dsp  cexample5.vcproj
examples/decompression/: Makefile.am  Makefile.in
examples/decompression/example1/: DExample1-shared.dsp  DExample1-static.dsp  Dexample1_shared.vcproj  Dexample1_static.vcproj  Makefile-linux-shared  Makefile-linux-static  Makefile-solaris-shared  Makefile-solaris-static  Makefile.am  Makefile.in  dexample1.c  dexample1.dsp  dexample1.vcproj
examples/decompression/example2/: DExample2-shared.dsp  DExample2-static.dsp  Dexample2_shared.vcproj  Dexample2_static.vcproj  Makefile-linux-shared  Makefile-linux-static  Makefile-solaris-shared  Makefile-solaris-static  Makefile.am  Makefile.in  dexample2.c  dexample2.dsp  dexample2.vcproj
examples/decompression/example3/: Example3.cpp  Example3.dsp  Example3.dsw  Example3.h  Example3.rc  Example3.vcproj  Example3Doc.cpp  Example3Doc.h  Example3View.cpp  Example3View.h  MainFrm.cpp  MainFrm.h  NCSFileDialog.cpp  NCSFileDialog.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  resource.h
examples/decompression/example3/res/: Example3.rc2
examples/decompression/example4/: DExample4-shared.dsp  DExample4-static.dsp  Dexample4_shared.vcproj  Dexample4_static.vcproj  Makefile-linux-shared  Makefile-linux-static  Makefile-solaris-shared  Makefile-solaris-static  Makefile.am  Makefile.in  dexample4.c  dexample4.dsp  dexample4.vcproj
(+54 files in other folders)
